contrast fix 2

--- a/src/styles/aboutme.module.css
+++ b/src/styles/aboutme.module.css
@@ -172,7 +172,7 @@
 
 .langSoftwareBox a {
   text-decoration: none;
-  color: #ff08c9;
+  color: white;
 }
 
 .langSoftwareBox a:hover {
