--- a/src/styles/style.module.css
+++ b/src/styles/style.module.css
@@ -147,7 +147,7 @@ body {
   justify-content: center;
   text-align: center;
   cursor: pointer;
-  opacity: 0.7;
+  opacity: 1;
   margin: 15px auto;
 }
 
